<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_settings">Settings</string>
    <string name="permission_request_title">Permissions Requirement</string>
    <string name="permission_camera_message">For this feature we need an access to camera and storage</string>
    <string name="permission_failure_message">Failed because of denied Permission</string>
    <string name="permission_registration_read_sms_alert">In order to register for a study, Sodalic requires access to some this device\'s telephone services. Please press \"Allow\" when you see a menu requesting permissions to access SMS. Depending on the details of the study, you are allowed to disable this permission in the Sodalic app\'s preferences after registration is complete.</string>
    <string name="permission_registration_actually_need_sms_alert">Sodalic requires SMS permissions in order to register for a study, but you appear to have denied it permission. We are going to bump you to the Sodalic app\'s settings so that you can manually enable SMS access. </string>
    <string name="power_management_exception_alert">This permission prompt you are about to see is required to allow Sodalic to execute in the background. </string>
    <string name="cant_make_phone_call_alert_title">Sodalic can\'t initiate phone calls</string>
    <string name="cant_make_a_phone_call_permissions_alert">In order for Sodalic to initiate a phone call, you must go to Settings -> Permissions and grant the Sodalic app the \'Phone\' permission.\n\nOr, you can open the Phone app and make the phone call yourself.</string>
    <string name="title_activity_audio_recorder">Make a Voice Recording</string>
    <string name="button_play">Play Recording</string>
    <string name="button_record">Record</string>
    <string name="title_activity_debug_interface">Sodalic debug interface</string>
    <string name="title_activity_survey">Survey</string>
    <string name="async_progress_label">Processing…</string>
    <string name="question_error_text">If you are reading this, something broke. Please contact the study administrators, and tell them that there is a bug in the survey!</string>
    <string name="invalid_device">This device does not meet minimum specifications for this app, to avoid any issues resulting from this please uninstall the app.</string>
    <string name="invalid_encryption_key">Received an invalid encryption key, please contact the a Sodalic administrator.</string>
    <string name="http_message_1">Someone misconfigured the server! Please contact research staff.</string>
    <string name="http_message_400">This device could not be registered under the provided patient ID; please contact research staff.</string>
    <string name="http_message_403_during_registration">Sorry: either your Study URL, your User ID, or your Temporary Password is incorrect.</string>
    <string name="http_message_403_wrong_password">Sorry, your Current Password is incorrect.</string>
    <string name="http_message_403_wrong_password_forgot_password_page">Sorry, your Temporary Password is incorrect.</string>
    <string name="http_message_405">Sorry, this User ID already has a phone registered. Please contact the research staff and ask them to clear your registration so that you can register this new phone.</string>
    <string name="http_message_internet_disconnected">It looks like you\'re not connected to the internet- please connect to the internet and try again.</string>
    <string name="http_message_server_not_found">Are you sure the URL for the study is correct?  Sodalic can\'t connect to the server.</string>
    <string name="http_message_unknown_response_code">An unknown error occurred.</string>
    <string name="server_error_title">Server error</string>
    <string name="error_title">Error</string>
    <string name="survey_next_button_text">Next</string>
    <string name="survey_submit_button">Submit Answers</string>
    <string name="default_survey_submit_success_message">Thank you for completing the survey.  A clinician will not see your answers immediately, so if you need help or are thinking about harming yourself, please contact your clinician.  You can also press the \"Call My Clinician\" button. </string>
    <string name="survey_submit_error_message">There has been an error; your answers may not have been recorded and saved</string>
    <string name="survey_loading_text" tools:ignore="TypographyEllipsis">Downloading the most up-to-date survey questions from the server...</string>
    <string name="login_page_for_app">Login page for app</string>
    <string name="login_activity_please_enter_password">Password:</string>
    <string name="incorrect_user_pass_combo">Incorrect user-password combination!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_login_string">Log In</string>
    <string name="login_activity_welcoming_message">Log in to Sodalic</string>
    <string name="user_id_system_mismatch">User ID does not match the one in the system. Try again</string>
    <string name="password_system_mismatch">Incorrect user ID and password combination</string>
    <string name="title_activity_reset_password">Change Password</string>
    <string name="reset_password_title">Change your password</string>
    <string name="reset_password_current_password_caption">Current password:</string>
    <string name="reset_password_new_password_caption">New password:</string>
    <string name="reset_password_confirm_new_password_caption">Confirm new password:</string>
    <string name="reset_password_submit">Change password</string>
    <string name="reset_password_error_alert_title">Can\'t change password</string>
    <string name="invalid_old_password">Old password incorrect</string>
    <string name="pass_reset_complete">Your password was successfully changed</string>
    <string name="password_mismatch">Password doesn\'t match Confirm Password.</string>
    <string name="new_password_mismatch">New Password doesn\'t match Confirm New Password.</string>
    <string name="password_too_short">Your password must be at least %d characters long.</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="forgot_password_title">Contact the research assistant to get a temporary password</string>
    <string name="forgot_password_title_with_id">Call the research assistant to get a temporary password. Your ID is \"%s\".</string>
    <string name="forgot_password_instructions_text">Your ID is \"%s\"; please identify yourself by that ID and not by your name.</string>
    <string name="forgot_password_call_button_text">Call research assistant</string>
    <string name="forgot_password_temporary_password_caption">Temporary password (the one the research assistant gave you)</string>
    <string name="registration_welcome_message">Welcome to the Sodalic</string>
    <string name="registration_server_url_label">Sodalic server:</string>
    <string name="registration_server_url_hint">For example, www.example.com</string>
    <string name="registration_show_advanced_label">Show advanced fields</string>
    <string name="registration_user_name_label">User Name</string>
    <string name="registration_user_name_hint">How should we call you?</string>
    <string name="registration_password_label">Password:</string>
    <string name="registration_new_password_label">New password:</string>
    <string name="registration_new_password_hint">At least 6 characters</string>
    <string name="registration_confirm_new_password_label">Confirm password:</string>
    <string name="registration_confirm_new_password_hint">At least 6 characters</string>
    <string name="registration_replacement_password_hint">At least %d characters</string>
    <string name="registration_submit">Register</string>
    <string name="title_activity_loading">Loading Sodalic</string>
    <string name="url_too_short">Please enter the URL for the Sodalic.</string>
    <string name="invalid_study_id">Please enter a valid Study ID.</string>
    <string name="invalid_user_name">Please enter your Name.</string>
    <string name="couldnt_register">Can\'t register</string>
    <string name="title_activity_phone_number_entry">Phone Numbers</string>
    <string name="number_entry_top_message">Phone Numbers</string>
    <string name="number_entry_button">Set Numbers</string>
    <string name="phone_number_entry_your_clinician_label">Primary researcher phone:</string>
    <string name="phone_number_entry_your_clinician_hint">10-digit number</string>
    <string name="phone_number_entry_research_assistant_label">Research assistant phone:</string>
    <string name="phone_number_entry_research_assistant_hint">10-digit number</string>
    <string name="loading_activity_loading_message" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="survey_notification_title_template">Survey: %1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="title_activity_main_menu">Sodalic</string>
    <string name="main_menu_top_message_format_1">Welcome, %s!</string>
    <string name="main_menu_view_graph">View survey answers on graph</string>
    <string name="default_call_clinician_text">Call My Clinician</string>
    <string name="title_activity_graph">Previous Survey Answers</string>
    <string name="record_activity_default_message">We would like to know how your day is going.  When you are ready, please press \"Record\" and speak for about 2 minutes.  Press \"Stop\" when you are finished. The recording will stop automatically after 4 minutes. Remember, researchers will not review and analyze your data until the end of the study, so if you are ill or in danger and need to speak with your clinician, press the \"Call My Clinician\" button.</string>
    <string name="record_activity_button">Press to record</string>
    <string name="record_activity_playback">Play recording</string>
    <string name="play_button_text">Play</string>
    <string name="play_button_stop_text">Stop</string>
    <string name="record_button_text">Record</string>
    <string name="record_button_stop_text">Stop</string>
    <string name="done_button_text">Save</string>
    <string name="timeout_msg_1st_half">"The voice recording can't be longer than "</string>
    <string name="timeout_msg_2nd_half">" minutes, so your recording was automatically stopped and saved"</string>
    <string name="survey_notification_app_name">Sodalic</string>
    <string name="new_android_survey_notification_ticker">New survey</string>
    <string name="new_android_survey_notification_details">Please fill out this survey.</string>
    <string name="new_audio_survey_notification_ticker">New voice recording</string>
    <string name="new_audio_survey_notification_details">Please make a voice recording.</string>
    <string name="start_tracking_survey"> org.beiwe.app.start_android_survey </string>
    <string name="start_audio_survey"> org.beiwe.app.start_audio_survey </string>
    <string name="turn_accelerometer_off">Accelerometer OFF</string>
    <string name="turn_accelerometer_on">Accelerometer On</string>
    <string name="turn_bluetooth_off">Bluetooth OFF</string>
    <string name="turn_bluetooth_on">Bluetooth On</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_about">About This App</string>
    <string name="call_research_assistant">Call Research Assistant</string>
    <string name="view_survey_answers">View Survey Answers</string>
    <string name="menu_take_picture">Take a Selfie</string>
    <string name="menu_send_crash_log">Send Crash Log</string>
    <string name="menu_delete_crash_log">Delete Crash Log</string>
    <string name="menu_show_debug">Show Debug Screen</string>
</resources>