<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_call_clinician"
          android:title="@string/default_call_clinician_text" />
    <item android:id="@+id/menu_call_research_assistant"
          android:title="@string/call_research_assistant" />
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about" />
    <item android:id="@+id/menu_change_password"
          android:title="@string/menu_change_password" />
    <item android:id="@+id/view_survey_answers"
          android:title="@string/view_survey_answers" />
    <item android:id="@+id/menu_take_picture"
          android:title="@string/menu_take_picture" />
    <item android:id="@+id/menu_send_crash_log"
          android:title="@string/menu_send_crash_log" />
    <item android:id="@+id/menu_delete_crash_log"
          android:title="@string/menu_delete_crash_log" />
    <item android:id="@+id/menu_show_debug"
          android:title="@string/menu_show_debug" />
    <item android:id="@+id/menu_signout"
          android:title="@string/menu_sign_out" />
</menu>
